Fix meetup photo distortion

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -39,7 +39,6 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
   margin-bottom: 60px;
 }
 /* Since positioning the image, we need to help out the caption */
@@ -49,15 +48,11 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
   background-color: #777;
 }
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
+  width: 100%;
+  height: auto;
 }
 
 
